kubernetes-config/web-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: events-web
  name: events-web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-web
      ver: v2.0
  template:
    metadata:
      labels:
        app: events-web
        ver: v2.0
    spec:
      containers:
      - image: timingila1/events-website:v2.0
        name: events-web
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
